# rust-graphql-dynamodb-sample

./: .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  database.yml  samconfig.toml  template.yml
api/: Cargo.toml
api/src/: cognite.rs  graph.rs  main.rs
api/src/graph/: inputs.rs  models.rs  mutation.rs  outputs.rs  query.rs
app/: Cargo.toml
app/src/: cognite.rs  ddb.rs  lib.rs  ssm.rs
app/src/application/: stock.rs
app/src/ddb/: stock.rs
app/src/domain/: stock.rs
