[package]
name = "app"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-config = { git = "https://github.com/awslabs/aws-sdk-rust", tag = "v0.0.17-alpha" }
aws-sdk-dynamodb = "0.0.24-alpha"
tokio = { version = "1", features = ["full"] }
thiserror = "1.0.24"
uuid = { version = "0.8", features = ["serde", "v4"] }
serde = "1.0.130"